# TaylorGreenVPM

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  validation.cpp  vpm.cpp  vpm.h
include/: treecode.h  vpm.h
src/: CMakeLists.txt  treecode.cpp  vpm.cpp
